--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body class="bg-light">
 
   <div class="container">
-    <main>
+    <form id="form">
       <div class="row mt-4">
         <div class="col">
           <h1 class="mb-3">Registro</h1>
@@ -56,7 +56,7 @@
         </div>
       </div>
 
-    </main>
+    </form>
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
       <p class="mb-1">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a
